# zuuAnimation

./: CMakeLists.txt  cp  cp.cu  main.cpp  readme.md  simple  start.cu  start.hpp  toy  toy.cu  x  x.cu
colors/: CMakeLists.txt  LuminanceColormap.cpp  LuminanceColormap.hpp  pngUtils.cpp  pngUtils.hpp
